--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,3 +1,4 @@
+
 header{
     display: flex;
     border: 0.5rem solid #0C0C0C;
@@ -14,10 +15,13 @@ nav ul{
     border: 0.5rem solid #0C0C0C;
     border-left-width: 0;
     border-left: 0;
-    background-color: #FEF1AF
+    background-color: #FEF1AF;
 }
 nav ul li{
 list-style: none;
+padding: 2rem;
+border: 0.2rem solid #0C0C0C;
+border-top-width: 0 ;
 padding: 2rem;
 }
 nav ul li a{
@@ -40,12 +44,18 @@ nav ul li a:hover{
     align-items: center;
     background-color: #FEF1AF;
 }
-main{
+main div{
     display: flex;
     flex-direction: row;
+    align-content: space-between;
+    border: 0.3rem solid #0C0C0C;
+
+    
 }
-main picture{
-    display: flex;
-    flex-direction: row;
+
+main div img{
+    width: 33%;
+    margin: 10px;
+   
 }
  
